Version 0.1 December 23,2010
- New: Added CRoutedCollection abstract class, implements design to use primary key based sharding
- New: Added CRoutedException class, implements exception that is caused in routed collection operations
- Chg: Renamed IStoragedModel to IStorageModel
- New: Added more phpdoc