@@ -3,3 +3,6 @@ Version 0.1 December 23,2010
 - New: Added CRoutedException class, implements exception that is caused in routed collection operations
 - Chg: Renamed IStoragedModel to IStorageModel
 - New: Added more phpdoc
+
+- Added CHashRoutedCollection
+- Refactoring of CStorageCollection to CBaseCollection with IApplicationComponent interface.
